--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Oddschecker- Node.js Coding Test - Feed Processing",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "build": "tsc --w",
+    "start": "nodemon"
   },
   "author": "Mittal Bhanderi",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.2",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.7.5",
     "express": "^4.17.1",
     "lodash": "^4.17.15"
   },
