--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,6 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 resources/oddschecker.json
+routes/*.js
+services/*.js
+app.js
