--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,10 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-resources/oddschecker.json
+resources
 routes/*.js
 services/*.js
 app.js
+di-container.js
+.vscode/settings.json
+yarn.lock
