--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "inversify": "^5.0.1",
     "loadtest": "*",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "reflect-metadata": "^0.1.13"
   }
 }
