--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.7.5",
     "express": "^4.17.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "node-cache": "^5.1.0"
   },
   "devDependencies": {
     "inversify": "^5.0.1",
